Vehicle Search by License Plate No.
Implementation of search by license plate no. and display information on
client side

--- a/app/index.html
+++ b/app/index.html
@@ -64,6 +64,7 @@
         <script src="scripts/controllers/about.js"></script>
         <script src="scripts/services/api.js"></script>
         <script src="scripts/services/tenant.js"></script>
+        <script src="scripts/services/vehicle.js"></script>
         <!-- endbuild -->
 </body>
 </html>
