--- a/app/index.html
+++ b/app/index.html
@@ -13,6 +13,7 @@
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
     <link rel="stylesheet" href="styles/signin.css">
+    <link rel="stylesheet" href="styles/signup.css">
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
   </head>
@@ -65,6 +66,7 @@
         <script src="scripts/services/api.js"></script>
         <script src="scripts/services/tenant.js"></script>
         <script src="scripts/services/vehicle.js"></script>
+        <script src="scripts/controllers/signup.js"></script>
         <!-- endbuild -->
 </body>
 </html>
