--- a/app/index.html
+++ b/app/index.html
@@ -12,6 +12,8 @@
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
+    <link rel="stylesheet" href="styles/header.css">
+    <link rel="stylesheet" href="styles/home.css">
     <link rel="stylesheet" href="styles/signin.css">
     <link rel="stylesheet" href="styles/signup.css">
     <link rel="stylesheet" href="styles/main.css">
