--- a/app/index.html
+++ b/app/index.html
@@ -69,6 +69,10 @@
         <script src="scripts/services/tenant.js"></script>
         <script src="scripts/services/vehicle.js"></script>
         <script src="scripts/controllers/signup.js"></script>
+        <script src="scripts/controllers/home.js"></script>
+        <script src="scripts/services/billing.js"></script>
+        <script src="scripts/controllers/header.js"></script>
+        <script src="scripts/controllers/billing.js"></script>
         <!-- endbuild -->
 </body>
 </html>
