Account Billing and Credit Card Payment
View for billing updated to include credit card details among other
things

--- a/app/index.html
+++ b/app/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="styles/signin.css">
     <link rel="stylesheet" href="styles/signup.css">
     <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/billing.css">
     <!-- endbuild -->
   </head>
   <body ng-app="cloudApp">
